# dtu

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  flake.nix
cli/: Cargo.toml  build.rs
cli/src/: broadcast.rs  call.rs  circular.rs  consts.rs  decompile.rs  gen_envrc.rs  main.rs  open_file.rs  printer.rs  progress.rs  provider.rs  sh.rs  shell_cmd.rs  start_activity.rs  start_service.rs  utils.rs
cli/src/app/: create.rs  mod.rs  run_test.rs  setup.rs
cli/src/check/: mod.rs
cli/src/db/: add_apk.rs  add_service_impl.rs  diff_source.rs  emulator_diff.rs  mod.rs  monitor.rs  setup.rs  update_binder_status.rs
cli/src/diff/: apks.rs  mod.rs  system_services.rs
cli/src/diff/ui/: applet.rs  customizer.rs  diffed_method.rs  mod.rs  state.rs  tabs.rs  ui.rs
cli/src/diff/ui/filter_boxes/: apk_ipc.rs  mod.rs  system_service_method.rs
cli/src/find/: apk_graph.rs  callers.rs  children.rs  class.rs  class_with_method.rs  fields.rs  interface_impl.rs  manifest.rs  methods.rs  mod.rs  permission.rs  protected_broadcast.rs  service_file.rs  smali_file.rs  strings.rs  utils.rs
cli/src/fuzz/: fuzz.rs  import.rs  logcat.rs  mod.rs  unprotected.rs
cli/src/graph/: canned.rs  import_apk_methods.rs  mod.rs  monitor.rs  neo4j.rs  repl.rs  setup.rs
cli/src/list/: apks.rs  children.rs  classes.rs  interface_impl.rs  mod.rs  system_service_methods.rs  system_services.rs
cli/src/meta/: mod.rs
cli/src/parsers/: apk.rs  app_activity.rs  diff_source.rs  graph_source.rs  heap_size.rs  mod.rs  parcel_string_parser.rs  provider.rs  system_service.rs
cli/src/pull/: applet.rs  mod.rs  pull.rs  ui.rs
cli/src/scripting/: mod.rs
cli/src/selinux/: mod.rs
cli/src/testing/: adb.rs  context.rs  mod.rs
cli/src/ui/: mod.rs
cli/src/ui/widgets/: block.rs  check_box.rs  closure_widget.rs  combo_box.rs  list.rs  mod.rs
complete/: Cargo.toml  README.md  build.rs  commands.toml
complete/shells/: dtu.bash  dtu.fish
complete/src/: command.rs  main.rs
dtu/: .gitignore  Cargo.toml  build.rs  device_diesel.toml  generate_db.sh  graph_diesel.toml  meta_diesel.toml
dtu-decompile/: Cargo.toml
dtu-decompile/src/: main.rs
dtu-py/: .gitignore  Cargo.toml  README.md  build.rs  dtu.pyi  pyproject.toml
dtu-py/dtu/: __init__.py  cachegraph.py  dtu.pyi
dtu-py/src/: adb.rs  app_server.rs  context.rs  devicefs.rs  exception.rs  filestore.rs  funcs.rs  graph.rs  intent_string.rs  lib.rs  parcel_string.rs  sql.rs  types.rs  utils.rs  version.rs
dtu/migrations/device_migrations/2022-10-13-225632_base/: down.sql  up.sql
dtu/migrations/device_migrations/2023-02-17-172022_generic_diff/: down.sql  up.sql
dtu/migrations/device_migrations/2023-06-15-091944_service_binder/: down.sql  up.sql
dtu/migrations/device_migrations/2024-07-15-000000_updates/: down.sql  up.sql
dtu/migrations/device_migrations/2026-05-27-786494_permission_unique_update/: down.sql  up.sql
dtu/migrations/graph_migrations/2025-01-07-000000_graph/: up.sql
dtu/migrations/graph_migrations/2026-05-29-086824_method_strings/: down.sql  up.sql
dtu/migrations/graph_migrations/2026-06-01-567943_field_access/: down.sql  up.sql
dtu/migrations/meta_migrations/2022-10-13-225632_base/: down.sql  up.sql
dtu/migrations/meta_migrations/2024-03-27-000000_selinux/: down.sql  up.sql
dtu/migrations/meta_migrations/2024-08-13-000000_full_setup/: down.sql  up.sql
dtu/migrations/meta_migrations/2026-01-12-000000_smalisa/: up.sql
dtu/migrations/meta_migrations/2026-06-24-096631_app_id/: down.sql  up.sql
dtu/migrations/test_device_migrations/2022-01-11-000000_base/: down.sql  up.sql
dtu/migrations/test_graph_migrations/2025-01-07-000001_graph/: up.sql
dtu/migrations/test_meta_migrations/2022-01-11-000000_base/: down.sql  up.sql
dtu/migrations/test_meta_migrations/2026-01-12-000000_test/: down.sql  up.sql
dtu/src/: adb.rs  command.rs  config.rs  context.rs  devicefs.rs  errors.rs  filestore.rs  fsdump.rs  lib.rs  manifest.rs  prereqs.rs  unknownbool.rs  version.rs
dtu/src/app/: mod.rs  templates.rs
dtu/src/app_server/: intent_string.rs  mod.rs  parcel_string.rs  server.rs
dtu/src/db/: common.rs  mod.rs
dtu/src/db/device/: db.rs  diff.rs  mod.rs  models.rs  schema.rs  setup.rs
dtu/src/db/graph/: cozodb.rs  cozosetup.rs  cozoutils.rs  db.rs  mod.rs  models.rs  neo4j.rs  schema.rs  setup.rs  setup_task.rs  traitdef.rs
dtu/src/db/meta/: db.rs  mod.rs  schema.rs
dtu/src/db/sql/: common.rs  mod.rs
dtu/src/db/sql/device/: db.rs  diff.rs  mod.rs  (+2 more)
dtu/src/decompile/: apex.rs  apex_build_info.rs  apex_manifest.rs  apk.rs  decompile.rs  decompile_file.rs  dex.rs  error.rs  jar.rs  mod.rs  vdex.rs
dtu/src/smalisa_wrapper/: gen_csvs.rs  mod.rs
dtu/src/tasks/: fuzz.rs  mod.rs  pull.rs  selinux.rs  smalisa.rs  task.rs
dtu/src/testing/: adb.rs  context.rs  mod.rs  temp.rs
dtu/src/utils/: allowlist.rs  class_name.rs  device_path.rs  fs.rs  hex.rs  mod.rs  readers.rs  smali.rs
dtu/templates/app/: Config.kt.j2  GeneratedManifest.xml.j2  TestAppConfirmedActivity.kt.j2  TestAppExperimentingActivity.kt.j2  TestAppFailedActivity.kt.j2  res_layout_confirmed_activity.xml.j2  res_layout_experimenting_activity.xml.j2  res_layout_failed_activity.xml.j2
dtu/templates/app/generic/: TestGeneric.kt.j2
dtu/templates/app/provider/: TestProvider.kt.j2
dtu/templates/app/service/: TestServiceRaw.kt.j2  TestServiceWithLib.kt.j2
dtu/templates/app/setup/: AbstractBinderTest.kt.j2  AbstractLogger.kt.j2  AbstractProviderTest.kt.j2  AbstractServiceTest.kt.j2  AbstractServiceTestActivity.kt.j2  AbstractSystemServiceTest.kt.j2  AbstractTest.kt.j2  AbstractTestActivity.kt.j2  AndroidLogger.kt.j2  App.kt.j2  GlobalConfig.kt.j2  IDeviceTest.aidl.j2  ILogger.aidl.j2  LoggingBinder.kt.j2  ParcelString.kt.j2  Server.kt.j2  TestAppHomeActivity.kt.j2  TestService.kt.j2  Utils.kt.j2  app_build.gradle.kts.j2  bundleHelper.kt.j2  exceptions.kt.j2  extensions.kt.j2  metadata.toml.j2  root_build.gradle.kts.j2  settings.gradle.kts.j2
dtu/templates/app/system_service/: TestSystemServiceRaw.kt.j2  TestSystemServiceWithLib.kt.j2
(+54 files in other folders)
