[workspace]
members = [
  "dtu",
  "cli",
  "dtu_proc_macro",
  "protoc_generate",
  "dtu-fs",
  "dtu-py",
]

resolver = "2"


[workspace.package]
version = "5.0.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
libc = "0.2.88"
log = "0.4"
regex = "1.11"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rstest = "0.16"
mockall = "0.13"
base64 = "0.21"
itertools = "0.13"
lazy_static = "1.4"
sha2 = "0.10"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[profile.dev.build-override]
opt-level = 3

[profile.release.build-override]
opt-level = 1
