[package]
name = "dtu-cli"
version.workspace = true
edition = "2021"

[[bin]]
name = "dtu"
path = "src/main.rs"


[dependencies]
dtu = { path = "../dtu", features = ["filestore", "app", "setup", "reexport_askama"] }
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.2"
promptly = "0.3"
rustyline = "15.0"
signal-hook = "0.3"
nix = { version = "0.31", features = ["process"] }

flexi_logger = { workspace = true }
clap = { workspace = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }
itertools = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
crossbeam = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }


[target.'cfg(not(windows))'.dependencies]
libc = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
mockall = { workspace = true }

[features]
default = ["unicode", "emoji"]
trace_db = ["dtu/trace_db"]
unicode = []
emoji = []
